test/testdata/classes/methods/init/unused_parameter_error.lox
class Foo {
  // error: z has been declared but is never used
  init(x, y, z) {
    print x + y;
  }
}
